Thanks random spammer for the spellcheck

--- a/projects/hybrid-instruments.html
+++ b/projects/hybrid-instruments.html
@@ -49,8 +49,8 @@
                     <p class="project-text">
                         During the Summer of 2016, I got the unique opportunity to be a part of one of the most interdisciplinary
                         projects I have ever joined. Combining the skills of art, electrical engineering, and music, this project was
-                        aimed to bring recording technology to the mobile world as portably as possible. Our solution was to create
-                        a 3D printed phone case with a portable verison of a musical instrument (our tests replicated a violin's bow)
+                        aimed to bring recording technology to the mobile world as conveniently as possible. Our solution was to create
+                        a 3D printed phone case with a portable version of a musical instrument (our tests replicated a violin's bow)
                         and a contact microphone, attach it to a mic pre-amp circuit to bring the signal up to line level for the phone
                         to receive and record with custom software. While involved with all facets of the project, my main task was to
                         build the mic pre-amp circuitry, starting from breadboard prototyping to final PCB circuit.<br>
