Updated for July 2021 update (web only)

--- a/resume.html
+++ b/resume.html
@@ -82,20 +82,39 @@
                 </div>
                 <div class="col-sm-7">
                     <div class="inner-text">
-                        <a class="discrete-links" href="/work/dspc.html"><b>QA Test Software Engineer</b></a> at DSP
-                        Concepts<br>
+                        <a class="discrete-links" href="/work/dspc.html#dsp-software-engineer">
+                            <b>DSP Software Engineer</b></a> at DSP Concepts<br>
                         <ul>
-                            <li>Architect a new Python package for Jenkins build system and internal developers for
-                                embedded testing and automated deployment</li>
-                            <li>Extend audio modules and regression test script for AudioWeaver MATLAB platform</li>
-                            <li>Develop unit testing framework for public API of embedded library</li>
-                            <li>Expand C library functionality into a Machine Learning environment using TensorFlow</li>
+                            <li>Manage unit testing effort by adopting Googletest C++ framework</li>
+                            <li>Implement a Python interface for the embedded C real-time audio library</li>
+                            <li>Architect a reimplementation of the audio signal designer tool for PC</li>
+                            <li>Update DSP audio blocks across several supported embedded targets</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                        <i>May 2020 - present</i>
+                        <i>July 2021 - present</i>
+                    </div>
+                </div>
+            </div>
+            <div class="row middle-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
+                        <a class="discrete-links" href="/work/dspc.html#qa-test-software-engineer">
+                            <b>QA Test Software Engineer</b></a> at DSP Concepts<br>
+                        <ul>
+                            <li>Architect a new Python package for Jenkins build system and internal developers for
+                                embedded testing and automated deployment</li>
+                            <li>Extend audio modules and regression test scripts for the AudioWeaver MATLAB platform</li>
+                            <li>Built software test plan for embedded software products, across many board architectures</li>
+                            <li>Established code quality analysis and automated reporting for MISRA compliance</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <i>May 2020 - July 2021</i>
                     </div>
                 </div>
             </div>
@@ -177,7 +196,7 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text timeframe">
-                        <i>Jan 2016 - May 2017</i>
+                        <i>January 2016 - May 2017</i>
                     </div>
                 </div>
             </div>
@@ -214,7 +233,7 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                        <i>Spring 2017</i>
+                        <i>January 2017 - May 2017</i>
                     </div>
                 </div>
             </div>
@@ -234,7 +253,7 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                        <i>Fall 2016</i>
+                        <i>August 2016 - December 2016</i>
                     </div>
                 </div>
             </div>
@@ -253,7 +272,7 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                        <i>Summer 2016</i>
+                        <i>May 2016 - October 2016</i>
                     </div>
                 </div>
             </div>
@@ -352,7 +371,7 @@
                 </div>
                 <div class="col-sm-2 timeframe">
                     <div class="inner-text">
-                        <i>April 2014 - Oct 2014</i>
+                        <i>April 2014 - October 2014</i>
                     </div>
                 </div>
             </div>
