High school information

--- a/resume.html
+++ b/resume.html
@@ -41,12 +41,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row top-row">
                 <div class="col-sm-3">
                     <h3 class="thin-headers">EDUCATION</h3>
                 </div>
                 <div class="col-sm-7">
-                    <div class="inner-text">
+                    <div class="inner-text fake-list">
                         <b>Carnegie Mellon University</b> - Pittsburgh, PA<br>
                         Bachelor of Science in Electrical and Computer Engineering<br>
                         Bachelor of Science in Music and Technology
@@ -54,10 +54,26 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                    <i>May 2017</i><br>
-                    <i>August 2017</i>
+                        <br />
+                        <i>May 2017</i><br>
+                        <i>August 2017</i>
+                    </div>
                 </div>
             </div>
+            <div class="row bottom-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text fake-list">
+                        <b>Haverford High School</b> - Havertown, PA<br>
+                        High School Diploma<br>
+                        <i>Overall GPA:</i> 3.89/4.00
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <br />
+                        <i>May 2013</i>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-sm-3">
