--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,8 @@
                     <div class="inner-text fake-list">
                         <b>Carnegie Mellon University</b> - Pittsburgh, PA<br>
                         Bachelor of Science in Electrical and Computer Engineering<br>
-                        Bachelor of Science in Music and Technology
+                        Bachelor of Science in Music and Technology<br>
+                        <i>Overall GPA:</i> ?.??/4.00
                     </div>
                 </div>
                 <div class="col-sm-2">
@@ -407,6 +408,21 @@
                 <div class="col-sm-2 timeframe">
                     <div class="inner-text">
                         <i>April 2014 - October 2014</i>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h3 class="thin-headers">COMMUNITY SERVICE</h3>
+                </div>
+                <div class="col-sm-9">
+                    <div class="inner-text">
+                        <p>
+                            Tour Guide for 100th Year Celebration of Bryn Mawr Township - <i>September 2012</i><br>
+                            Performed piano/trumpet duo for Martin's Run Senior Living Community - <i>August 2011</i><br>
+                            Prepared and donated over 10 gallons of chili for Ardmore Food Pantry - <i>June 2011</i><br>
+                            Led the assembly of playground bench shade awnings for Eagle Scout Project - <i>March 2010</i>
+                        </p>
                     </div>
                 </div>
             </div>
