Graphite Audio Circuit project

--- a/resume.html
+++ b/resume.html
@@ -273,7 +273,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row bottom-row">
+            <div class="row middle-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
                         <!-- TODO: Move this link to #embedded-project-link -->
@@ -290,6 +290,26 @@
                 <div class="col-sm-2">
                     <div class="inner-text">
                         <i>August 2016 - December 2016</i>
+                    </div>
+                </div>
+            </div>
+            <div class="row bottom-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
+                        <!-- TODO: Move this link to #stuco-project-link -->
+                        <b><a class="discrete-links" href="#stuco-project-link">Audio Graphite Circuit</a></b>
+                        (<a class="discrete-links" href="#stuco-syllabus">98-281</a> Final Class Project)
+                        <ul>
+                            <li>Demonstrated an audio electronic circuit by acquiring needed components and wiring the
+                                electrical system</li>
+                            <li>Changed the audio pitch through an audio transformer with leads connected to graphite
+                                as a variable resistor</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <i>August 2013 - December 2013</i>
                     </div>
                 </div>
             </div>
