--- a/resume.html
+++ b/resume.html
@@ -293,7 +293,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row bottom-row">
+            <div class="row middle-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
                         <!-- TODO: Move this link to #stuco-project-link -->
@@ -310,6 +310,25 @@
                 <div class="col-sm-2">
                     <div class="inner-text">
                         <i>August 2013 - December 2013</i>
+                    </div>
+                </div>
+            </div>
+            <div class="row bottom-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
+                        <!-- TODO: Move this link to #whhs-link -->
+                        <b>Radio Broadcast System</b> (<a class="discrete-links" href="#whhs-link">WHHS Radio Station</a>)
+                        <ul>
+                            <li>Designed technical system to live broadcast sport commentators' audio over local high
+                            school FM radio station technology</li>
+                            <li>Connected headset microphones to bluetooth phone receiver, transmitted over 1100 feet
+                            of wired phone line, and redirected through the radio's audio pickup for distribution</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <i>September 2011 - June 2012</i>
                     </div>
                 </div>
             </div>
