--- a/resume.html
+++ b/resume.html
@@ -296,6 +296,24 @@
             <div class="row middle-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
+                        <!-- TODO: Move this link to #15-112-final-project link -->
+                        <b><a class="discrete-links" href="#15-112-final-project-link">Music Generation Algorithm</a></b>
+                        <ul>
+                            <li>Designed a Python application that recursively generates a random piano sequence that
+                                follows counterpoint music theory rules</li>
+                            <li>Developed a piano GUI front-end in Python for user input, translated to musicXML data</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <i>January 2014 - May 2014</i>
+                    </div>
+                </div>
+            </div>
+            <div class="row middle-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
                         <!-- TODO: Move this link to #stuco-project-link -->
                         <b><a class="discrete-links" href="#stuco-project-link">Audio Graphite Circuit</a></b>
                         (<a class="discrete-links" href="#stuco-syllabus">98-281</a> Final Class Project)
