High School Activities added

--- a/resume.html
+++ b/resume.html
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <div class="col-sm-2">
-                    <div class="inner-text timeframe">
+                    <div class="inner-text">
                         <i>January 2016 - May 2017</i>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
                     </div>
                 </div>
                 <div class="col-sm-2">
-                    <div class="inner-text timeframe">
+                    <div class="inner-text">
                         <i>June 2013 - August 2013</i>
                     </div>
                 </div>
@@ -442,7 +442,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-2 timeframe">
+                <div class="col-sm-2">
                     <div class="inner-text">
                         <i>May 2014 - May 2017</i>
                     </div>
@@ -462,9 +462,30 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-2 timeframe">
+                <div class="col-sm-2">
                     <div class="inner-text">
                         <i>April 2014 - October 2014</i>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h3 class="thin-headers">ACTIVITES</h3>
+                </div>
+                <div class="col-sm-9">
+                    <div class="inner-text">
+                        <p>
+                            <b><a class="discrete-links" href="#DS-link">Dancers’ Symposium:</a></b> <i>September 2013 – May 2017</i><br>
+                            <b><a class="discrete-links" href="https://www.youtube.com/watch?v=RKYUzV3wp9s">Independent Musicians Organization:</a></b> <i>September 2013 – January 2017</i><br>
+                            <b><a class="discrete-links" href="#deewane-link">Deewane a Cappella:</a></b> <i>September 2013 – August 2015</i><br>
+                            <b><a class="discrete-links" href="#UDSS-link">Upper Darby Summer Stage:</a></b> <i>June 2007 – August 2013</i><br>
+                            <b>Chamber Singers:</b> <i>September 2011 – June 2013</i><br>
+                            <b>McHenry Dance Studio Competition Team:</b> <i>September 2011 – June 2013</i><br>
+                            <b>Tri-M Music Honor Society:</b> <i>September 2011 – June 2013</i><br>
+                            <b><a class="discrete-links" href="#whhs-link">WHHS Radio Station:</a></b> <i>October 2009 – June 2013</i><br>
+                            <b>Haverford Ultimate Disc Alliance:</b> <i>September 2011 – January 2013</i><br>
+                            <b><a class="discrete-links" href="#bsa-link">Boy Scouts of America:</a></b> <i>September 2006 – May 2010</i><br>
+                        </p>
                     </div>
                 </div>
             </div>
