Updated course list

--- a/resume.html
+++ b/resume.html
@@ -412,15 +412,43 @@
                         </ul>
                         For Carnegie Mellon University Bachelor's Degrees:
                         <ul>
+                            <li><b>15-112:</b> Fundamentals of Programming and Computer Science</li>
+                            <li><b>15-122:</b> Principles of Imperative Computation</li>
+                            <li><b>15-213:</b> Introduction to Computer Systems</li>
                             <li><b>15-323:</b> Computer Music Systems and Information Processing</li>
+                            <li><b>18-100:</b> Intro to Electrical and Computer Engineering</li>
+                            <li><b>18-220:</b> Electronic Devices and Analog Circuits</li>
                             <li><b>18-240:</b> Structure and Design of Digital Systems</li>
+                            <li><b>18-290:</b> Signals and Systems</li>
                             <li><b>18-349:</b> Embedded Real-Time Systems</li>
                             <li><b>18-370:</b> Fundamentals of Control</li>
                             <li><b>18-491:</b> Fundamentals of Signal Processing</li>
                             <li><b>18-493:</b> Electroacoustics</li>
-                            <li><b>18-551:</b> Signal Processing Systems Design</li>
+                            <li><b>18-551:</b> Signal Processing Systems Design <i>(Capstone Design)</i></li>
+                            <li><b>33-114:</b> Physics of Musical Sound</li>
+                            <li><b>36-217:</b> Probability Theory and Random Processes</li>
+                            <li><b>57-151:</b> Counterpoint Theory & Application</li>
+                            <li><b>57-152:</b> Harmony 1</li>
+                            <li><b>57-153:</b> Harmony 2</li>
+                            <li><b>57-161:</b> Eurhythmics 1</li>
+                            <li><b>57-162:</b> Eurhythmics 2</li>
+                            <li><b>57-163:</b> Eurhythmics 3</li>
+                            <li><b>57-164:</b> Eurhythmics 4</li>
+                            <li><b>57-171:</b> Intro to Music Technology</li>
+                            <li><b>57-181:</b> Solfege 1</li>
+                            <li><b>57-182:</b> Solfege 2</li>
+                            <li><b>57-183:</b> Solfege 3</li>
+                            <li><b>57-184:</b> Solfege 4</li>
+                            <li><b>57-258:</b> 20th-21st Century Techniques</li>
+                            <li><b>57-332:</b> Introduction to Conducting</li>
+                            <li><b>57-336:</b> Instrumental & Choral Conducting</li>
                             <li><b>57-338:</b> Sound Editing and Mastering</li>
                             <li><b>57-347:</b> Electronic and Computer Music</li>
+                            <li><b>57-408:</b> Form and Analysis</li>
+                            <li><b>57-438:</b> Multitrack Recording</li>
+                            <li><b>70-414:</b> Entrepreneurship for Engineers</li>
+                            <li><b>80-210:</b> Logic and Proofs</li>
+                            <li><b>98-2??:</b> Android App Development</li>
                         </ul>
                     </div>
                 </div>
@@ -470,7 +498,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-3">
-                    <h3 class="thin-headers">ACTIVITES</h3>
+                    <h3 class="thin-headers">ACTIVITIES</h3>
                 </div>
                 <div class="col-sm-9">
                     <div class="inner-text">
