--- a/resume.html
+++ b/resume.html
@@ -217,6 +217,25 @@
                     </div>
                 </div>
             </div>
+            <div class="row middle-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
+                        <b><a class="discrete-links" href="/work/student-life.html#resident-assistant">Resident Assistant</a></b> at Carnegie Mellon University
+                        <ul>
+                            <li>Mentored 92 freshman and upper-class students by promoting positive social development
+                                in a safe community</li>
+                            <li>Acted as a first responder for emergency situations among residents and building
+                                incidents, assisting appropriate personnel as directed</li>
+                            <li>Planned 30 social events for fun interactions and skills development</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <i>August 2014 – May 2016</i>
+                    </div>
+                </div>
+            </div>
             <div class="row bottom-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
@@ -448,7 +467,7 @@
                             <li><b>57-438:</b> Multitrack Recording</li>
                             <li><b>70-414:</b> Entrepreneurship for Engineers</li>
                             <li><b>80-210:</b> Logic and Proofs</li>
-                            <li><b>98-2??:</b> Android App Development</li>
+                            <li><b>98-291:</b> Android App Development</li>
                         </ul>
                     </div>
                 </div>
