DS Director/code updates

--- a/resume.html
+++ b/resume.html
@@ -340,10 +340,10 @@
                     <div class="inner-text">
                         <b><a class="discrete-links" href="#DS-link">Director - Dancers' Symposium</a></b>
                         <ul>
-                            <li>Coordinated schedules for 130 dancers by reforming algorithms, designing code, and
-                                connecting third-party scheduler APIs for 300% efficiency increase</li>
-                            <li>Oversaw logistics for bi-annual showcases of 40 dance pieces to be performed for more
-                                than 1000 audience members</li>
+                            <li>Coordinated schedules for 130 dancers by reforming algorithms and connecting third-party
+                                scheduler APIs for 4x efficiency increase</li>
+                            <li>Oversaw logistics for bi-annual showcases of 40 dance pieces performed for more than
+                                1000 audience members</li>
                             <li>Acted as liaison for technical crew, catering, rehearsal space administrators, auxiliary
                                 dance companies, and local dance startup companies</li>
                         </ul>
