--- a/resume.html
+++ b/resume.html
@@ -298,7 +298,7 @@
                         <!-- TODO: Move this link to #embedded-project-link -->
                         <b><a class="discrete-links" href="#embedded-project-link">Embedded Real-Time Operating System</a></b>
                         (<a class="discrete-links" href="https://course.ece.cmu.edu/~ece349/f16/docs/18-349_syllabus.pdf">18-349</a>
-                        Final Class Project)
+                        Final Project)
                         <ul>
                             <li>Implemented real-time operating system running a Linux kernel on a Raspberry Pi 3</li>
                             <li>Cumulative class projects included writing device drivers for UART/I<sup>2</sup>C/SPI,
@@ -315,8 +315,27 @@
             <div class="row middle-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
+                        <!-- TODO: Move this link to #fpga-project-link -->
+                        <b><a class="discrete-links" href="#fpga-project-link">Breakout on FPGA</a></b>
+                        (<a class="discrete-links" href="https://courses.ece.cmu.edu/18240">18-240</a> Lab 3B Project)
+                        <ul>
+                            <li>Implemented a Brick Buster video game in SystemVerilog for an FPGA board</li>
+                            <li>Wrote device drivers for VGA display, seven-segment numeric display, and button inputs</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <i>August 2014 - December 2014</i>
+                    </div>
+                </div>
+            </div>
+            <div class="row middle-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
                         <!-- TODO: Move this link to #15-112-final-project link -->
                         <b><a class="discrete-links" href="#15-112-final-project-link">Music Generation Algorithm</a></b>
+                        (15-112 Final Project)
                         <ul>
                             <li>Designed a Python application that recursively generates a random piano sequence that
                                 follows counterpoint music theory rules</li>
@@ -335,7 +354,7 @@
                     <div class="inner-text">
                         <!-- TODO: Move this link to #stuco-project-link -->
                         <b><a class="discrete-links" href="#stuco-project-link">Audio Graphite Circuit</a></b>
-                        (<a class="discrete-links" href="#stuco-syllabus">98-281</a> Final Class Project)
+                        (<a class="discrete-links" href="#stuco-syllabus">98-281</a> Final Project)
                         <ul>
                             <li>Demonstrated an audio electronic circuit by acquiring needed components and wiring the
                                 electrical system</li>
