Added Pre-College Counselor

--- a/resume.html
+++ b/resume.html
@@ -236,6 +236,23 @@
                     </div>
                 </div>
             </div>
+            <div class="row middle-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
+                        <b><a class="discrete-links" href="/work/student-life.html#pre-college">Pre-College Counselor</a></b> at Carnegie Mellon University
+                        <ul>
+                            <li>Supervised 550 high school students attending college courses, student interest groups, and live-in housing</li>
+                            <li>Performed on-call shifts for emergency response situations, including conflict resolution and routine preparedness drills</li>
+                            <li>Coordinated with 41 staff members to plan events to promote positive well-being, continued learning, and civic engagement</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <i>June 2015 – August 2015</i>
+                    </div>
+                </div>
+            </div>
             <div class="row bottom-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
