Small research updates

--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
                         <b>Carnegie Mellon University</b> - Pittsburgh, PA<br>
                         Bachelor of Science in Electrical and Computer Engineering<br>
                         Bachelor of Science in Music and Technology<br>
-                        <i>Overall GPA:</i> ?.??/4.00
+                        <i>Overall GPA:</i> 3.13/4.00
                     </div>
                 </div>
                 <div class="col-sm-2">
@@ -414,7 +414,7 @@
                         <b><a class="discrete-links" href="/projects/non-contact-eeg.html">Non-Contact EEG System</a></b> at Carnegie Mellon University
                         <ul>
                             <li>Designed a non-contact electrode EEG system for Pulkit Grover as a better alternative to dry/wet contact electrode systems</li>
-                            <li>Researched current systems, engineered split channel electrodes, and connected several components on printed circuit boards (PCBs)</li>
+                            <li>Researched comparable systems, engineered split channel electrodes, and connected several components on printed circuit boards (PCBs)</li>
                         </ul>
                     </div>
                 </div>
@@ -431,7 +431,7 @@
                         <ul>
                             <li>Engineered pre-amplifiers for contact microphones with PCBs designed in EAGLE</li>
                             <li>Evaluated performance on 3D printed phone cases with string bows attached</li>
-                            <li>Characterized analog signal measurement with mobile app development for QA</li>
+                            <li>Characterized analog signal measurement with mobile app development for quality assurance</li>
                         </ul>
                     </div>
                 </div>
