Small research updates (hybrid instrument)

--- a/resume.html
+++ b/resume.html
@@ -429,9 +429,9 @@
                     <div class="inner-text">
                         <b><a class="discrete-links" href="/projects/hybrid-instruments.html">Hybrid Instruments</a></b> at Carnegie Mellon University
                         <ul>
-                            <li>Engineered pre-amplifiers for contact microphones with PCBs designed in EAGLE</li>
-                            <li>Evaluated performance on 3D printed phone cases with string bows attached</li>
-                            <li>Characterized analog signal measurement with mobile app development for quality assurance</li>
+                            <li>Engineered pre-amplifiers for piezo contact microphones with PCBs designed in EAGLE</li>
+                            <li>Evaluated performance on specialized 3D printed phone cases that attached a bowed string</li>
+                            <li>Characterized analog signal measurement with mobile app development for engineering verification</li>
                         </ul>
                     </div>
                 </div>
