Music Tech Final Project updates

--- a/resume.html
+++ b/resume.html
@@ -280,9 +280,9 @@
                     <div class="inner-text">
                         <b><a class="discrete-links" href="/projects/music-tech-capstone.html">Depth-Controlled Ambisonic Audio</a></b> (Music and Technology Final Project)
                         <ul>
-                            <li>Interfaced with Microsoft Kinect sensor to track user movements in a 360° speaker ring</li>
+                            <li>Interfaced with Microsoft Kinect sensor to track a user's hand and body movements using a TouchOSC design</li>
                             <li>Relayed these movements through MaxMSP to 2<sup>nd</sup> order ambisonic audio processing</li>
-                            <li>Replicated a 3D auditory experience by decoding signals for an 8-channel output</li>
+                            <li>Replicated a 3D auditory experience by decoding signals for an 8-channel output in a 360° speaker ring</li>
                         </ul>
                     </div>
                 </div>
