ECE Capstone update

--- a/resume.html
+++ b/resume.html
@@ -297,9 +297,11 @@
                     <div class="inner-text">
                         <b><a class="discrete-links" href="/projects/ece-capstone.html">3D Object Reconstruction</a></b> (Electrical and Computer Engineering Capstone)
                         <ul>
-                            <li>Developed a system that creates 3D models of real-world objects</li>
-                            <li>Utilized point cloud technology, Nearest Neighbor Filtering, Euclidean Clustering for
-                                Segmentation, Multiple Viewpoint Registration, and Fast Triangulation Meshing</li>
+                            <li>Developed a system that creates 3D models of real-world objects, such as water bottles,
+                                backpacks, and pencil cases</li>
+                            <li>Utilized point cloud technology (via Project Tango API), Nearest Neighbor Filtering,
+                                Euclidean Clustering for Segmentation, Multiple Viewpoint Registration, and Fast
+                                Triangulation Meshing</li>
                         </ul>
                     </div>
                 </div>
