--- a/resume.html
+++ b/resume.html
@@ -227,6 +227,7 @@
                             <li>Acted as a first responder for emergency situations among residents and building
                                 incidents, assisting appropriate personnel as directed</li>
                             <li>Planned 30 social events for fun interactions and skills development</li>
+                            <li>Educated and enforced community standards and university policies</li>
                         </ul>
                     </div>
                 </div>
