--- a/work/student-life.html
+++ b/work/student-life.html
@@ -78,12 +78,13 @@
                 <div class="col-lg-12">
                     <p class="project-text">
                         <b>Resident Assistant:</b> In this role I provided leadership to about 600 students
-                        (<i>sophomore year:</i> 381 upperclassmen &amp; graduate students; <i>junior year:</i> 209 freshmen
-                        students) in both apartment-style and dormitory living, with my floor containing 40-52 students.
-                        I created and promoted many specialized events for my residents to promote personal development
-                        and continued learning, including events where residents cooked dinners from all around the
-                        world together, personal sessions where I taught a series of audio technology and production
-                        skills to residents, and trips to get out to visit the local festivals of Pittsburgh, like
+                        (<i>sophomore year in Fairfax Apartments:</i> 381 upperclassmen &amp; graduate students;
+                        <i>junior year in Morewood Gardens E-Tower:</i> 209 freshmen students) in both apartment-style
+                        and dormitory living, with my floor containing 40-52 students. I created and promoted many
+                        specialized events for my residents to promote personal development and continued learning,
+                        including events where residents cooked dinners from all around the world together, personal
+                        sessions where I taught a series of audio technology and production skills to residents, and
+                        trips to get out to visit the local festivals of Pittsburgh, like
                         <a href="https://en.wikipedia.org/wiki/Light_Up_Night">Light Up Night</a>.
                     </p>
                 </div>
