Adding Orchestration Final Project

--- a/work/index.html
+++ b/work/index.html
@@ -92,7 +92,7 @@
             <div class="row experience-row">
                 <div class="experience-left col-sm-12 col-md-6">
                     <h1 class="centered-head small-head">Carnegie Mellon University</h1>
-                    <h3 class="centered-head">August 2014 - May 2017</h3>
+                    <h3 class="centered-head"><i>August 2014 - May 2017</i></h3>
                     <h5 class="centered-head">Pittsburgh, PA</h5>
                 </div>
                 <div class="experience-right col-sm-12 col-md-6">
